--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                         <ul id="duanyoupaihangbang1">
                             <li>
                                 <p class="">穿越火线</p>
+                                <div style="display: none;">by github cv-cat</div>
                                 <img src="images/common/chuanyuehuoxian.jpg" alt="">
                                 <div class="paihangbigblack">
                                     <p class="paihangsmallblack">进入官网</p>
@@ -2330,7 +2331,6 @@
                                             <img src="images/common/makeboluo.jpg" alt="">
                                             <span>马可波罗</span>
                                         </li>
-<!--  created by github cv-cat (992822653@qq.com)  -->
                                         <li>
                                             <img src="images/common/gongsunli.jpg" alt="">
                                             <span>公孙离</span>
